Fixes subscription promo button centering issue right aligns view all link for products section on mobile

--- a/styleguide/source/assets/scss/02-molecules/_product.scss
+++ b/styleguide/source/assets/scss/02-molecules/_product.scss
@@ -50,6 +50,8 @@
 
 .ama__products {
   position: relative;
+  display: flex;
+  flex-direction: column;
 
   &__wrap {
     display: flex;
